# ps-datachunk

./: Cargo.toml
src/: adc.rs  aligned.rs  error.rs  lib.rs  typed.rs
src/aligned/: mod.rs
src/borrowed/: hashcow.rs  mod.rs
src/borrowed/implementations/: as_ref.rs  deref.rs
src/cow/: mod.rs
src/cow/implementations/: as_ref.rs  datachunk.rs  deref.rs  mod.rs
src/cow/implementations/from/: borrowed.rs  mbuf.rs  mod.rs  owned.rs  shared.rs
src/encrypted/: mod.rs
src/encrypted/implementations/: as_ref.rs
src/mbuf/: mod.rs
src/mbuf/implementations/: as_ref.rs  deref.rs  mod.rs
src/owned/: deserializer.rs  mod.rs  serializer.rs
src/owned/implementations/: as_ref.rs  deref.rs  from.rs  mod.rs
src/serialized/: mod.rs
src/shared/: mod.rs
src/shared/implementations/: as_ref.rs  mod.rs
src/typed/: mod.rs
src/typed/implementations/: as_ref.rs
src/utils/: constants.rs  decrypt.rs  mod.rs  offsets.rs  rounding.rs
