[package]
name = "ps-datachunk"
version = "0.1.0-34"
edition = "2021"
description = "Chunk-based data encrypter"
license = "GPL-3.0-or-later"

[dependencies]
bytes = "1.11.0"
ps-buffer = "0.1.0-21"
ps-cypher = "0.1.0-27"
ps-hash = "0.1.0-24"
ps-mbuf = "0.1.0-8"
rancor = "0.1.1"
rkyv = { version = "0.8.14", features = ["bytecheck"] }
thiserror = "2.0.18"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
