[package]
name = "ps-datachunk"
version = "0.1.0-36"
edition = "2021"
description = "Chunk-based data encrypter"
documentation = "https://docs.rs/ps-datachunk"
homepage = "https://github.com/prokopschield/ps-datachunk"
repository = "https://github.com/prokopschield/ps-datachunk"
license = "GPL-3.0-or-later"

[dependencies]
bytes = "1.11.1"
ps-buffer = "0.1.0-21"
ps-cypher = "0.1.0-28"
ps-hash = "0.1.0-24"
ps-mbuf = "0.1.0-8"
rancor = "0.1.1"
rkyv = { version = "0.8.15", features = ["bytecheck"] }
thiserror = "2.0.18"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
